--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Angular</title>
+<html>
+<head lang="zh-cn">
 </head>
 <body>
-
 </body>
 </html>
