--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head lang="zh-cn">
+    <title>gulp 测试</title>
+    <!-- build:css css/main.css -->
+    <link href="css/a.css" rel="stylesheet"/>
+    <link href="css/b.css" rel="stylesheet"/>
+    <!-- endbuild -->
 </head>
 <body>
+<!-- build:js js/main.js -->
+<script type="text/javascript" src="js/a.js"></script>
+<script type="text/javascript" src="js/b.js"></script>
+<!-- endbuild -->
 </body>
 </html>
