--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html>
 <head lang="zh-cn">
     <title>gulp 测试</title>
-    <!-- build:css css/main.css -->
-    <link href="css/a.css" rel="stylesheet"/>
-    <link href="css/b.css" rel="stylesheet"/>
+    <!-- build:css styles/main.css -->
+    <link href="styles/main.scss" rel="stylesheet"/>
     <!-- endbuild -->
 </head>
 <body>
-<!-- build:js js/main.js -->
-<script type="text/javascript" src="js/a.js"></script>
-<script type="text/javascript" src="js/b.js"></script>
-<!-- endbuild -->
+<h1>KiddCn 标题一</h1>
+<div class="text-box"></div>
 </body>
 </html>
