--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="zh-cn">
+    <meta charset="UTF-8">
     <title>gulp 测试</title>
     <!-- build:css styles/main.css -->
     <link href="styles/main.scss" rel="stylesheet"/>
