babel to jsxtransformer.js

--- a/react.html
+++ b/react.html
@@ -5,11 +5,11 @@
     <title>React Demo!</title>
     <script src="./vendor/react-15.3.1/build/react.min.js"></script>
     <script src="./vendor/react-15.3.1/build/react-dom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
+    <script src="//cdn.bootcss.com/react/0.13.3/JSXTransformer.js"></script>
 </head>
 <body>
 <div id="examples"></div>
-<script type="text/babel">
+<script type="text/jsx">
     var HelloWorld=React.createClass({
         render:function(){
             console.log(this.props);
