--- a/webpack-learn/index.html
+++ b/webpack-learn/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
 </head>
-<body>
+<body ng-app="app">
+<div app></div>
 <script src="bin/app.bundle.js" charset="utf-8"></script>
 </body>
 </html>
