--- a/webpack-learn/index.html
+++ b/webpack-learn/index.html
@@ -5,6 +5,7 @@
 </head>
 <body ng-app="app">
 <div app></div>
+<div ng-view></div>
 <script src="bin/app.bundle.js" charset="utf-8"></script>
 </body>
 </html>
