angular添加路由，使用raw-loader加载html文件，html-webpack-plugin生成html文件！

--- a/webpack-learn/bin/index.html
+++ b/webpack-learn/bin/index.html
@@ -6,5 +6,5 @@
 <body ng-app="app">
 <div app></div>
 <div ng-view></div>
-</body>
+<script type="text/javascript" src="app.bundle.js"></script></body>
 </html>
