--- a/webpack-learn/bin/index.html
+++ b/webpack-learn/bin/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-</head>
-<body ng-app="app">
-<div app></div>
-<div ng-view></div>
-<script type="text/javascript" src="app.bundle.js"></script></body>
-</html>
+<!DOCTYPE html> <html> <head> <meta charset=utf-8> </head> <body ng-app=app> <div app></div> <div ng-view></div> <script type="text/javascript" src="app.bundle.js"></script></body> </html>
