code spliting chunk!

--- a/webpack-learn/bin/index.html
+++ b/webpack-learn/bin/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
 </head>
 <body ng-app="app">
-<div app></div>
-<div ng-view></div>
-<script type="text/javascript" src="app.bundle.js"></script></body>
+<div class="img"></div>
+<script type="text/javascript" src="main.2a261fa1fb3a3bb8a848.js"></script></body>
 </html>
