--- a/webpack-learn/index.html
+++ b/webpack-learn/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
 </head>
 <body ng-app="app">
-<div app></div>
-<div ng-view></div>
+<div class="img"></div>
 </body>
 </html>
