--- a/webpack/index.html
+++ b/webpack/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 </head>
-<body ng-app="app">
-<div class="img"></div>
+<body>
+it's index page!
 </body>
 </html>
