--- a/react/index.html
+++ b/react/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>ReactDemo</title>
 </head>
 <body>
-$END$
+just a test
+<div id="example"></div>
 </body>
 </html>
