init gulp-learn branch!

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>ReactDemo</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="styles/test.css"/>
 </head>
 <body>
-just a test
-<div id="example"></div>
+你好啊紫00230hhj
 </body>
 </html>
