delete native files，migrate webpack 1 to migrate 2

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ReactDemo</title>
+    <title>ReactDemo Date show</title>
 </head>
 <body>
 <div id="app"></div>
