--- a/gulp-learn/src/index.html
+++ b/gulp-learn/src/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="styles/test.css"/>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
-你好啊紫00230hhj
+你好啊紫00230h teset
+<script>
+  axios.get('/test.json');
+  axios.get('/npms/dsp/audit/getAuditVideoList.action')
+</script>
 </body>
 </html>
